tests/NormalTests/paczka1/small_fuzzy/81714922.err
Error in line 1: Piw A258 5,9
Error in line 4: OZQMcFdqv A255 99,2
